<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.blocklynukkit</groupId>
    <artifactId>BlocklyNukkit</artifactId>
    <version>1.0.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>ck</name>
            <url>http://nz.ipyvps.com:1111/repository/cookie-studio/</url>
        </repository>
        <snapshotRepository>
            <id>shapshots</id>
            <name>ck</name>
            <url>http://nz.ipyvps.com:1111/repository/cookie-studio/</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>
                        <compilerArg>-parameters</compilerArg>
                        <compilerArg>-proc:none</compilerArg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>${project.basedir}/nukkit/plugins/libs</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </resource>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </resource>
        </resources>
    </build>
    <repositories>
        <repository>
            <id>central</id>
            <name>aliyun maven</name>
            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>jcenter</id>
            <url>https://jcenter.bintray.com/</url>
        </repository>
        <repository>
            <id>nukkitx-repo</id>
            <url>http://repo.nukkitx.com/main/</url>
        </repository>
        <repository>
            <id>releases</id>
            <url>http://lucgameshd.de:8081/content/repositories/releases</url>
        </repository>
        <repository>
            <id>repo-lanink-cn</id>
            <url>https://repo.lanink.cn/repository/maven-public/</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.5.7</version>
        </dependency>
        <dependency>
            <groupId>me.onebone</groupId>
            <artifactId>economyapi</artifactId>
            <version>2.0.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.30.0-GA</version>
        </dependency>
        <dependency>
            <groupId>cn.nukkit</groupId>
            <artifactId>Nukkit</artifactId>
            <version>MOT-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.creeperface.nukkit.placeholderapi</groupId>
            <artifactId>PlaceholderAPI</artifactId>
            <version>1.3-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/nukkit/plugins/PlaceholderAPI-1.3-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>de.theamychan</groupId>
            <artifactId>ScoreboardAPI</artifactId>
            <version>1.3</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/nukkit/plugins/ScoreboardAPI-1.3-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.nukkitx</groupId>
            <artifactId>fakeinventories</artifactId>
            <version>1.0.3-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/nukkit/plugins/fakeinventories-1.0.3.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.mchange</groupId>
            <artifactId>c3p0</artifactId>
            <version>0.9.5.5</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/nukkit/plugins/c3p0-0.9.5.5.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.mchange</groupId>
            <artifactId>mchange-commons-java</artifactId>
            <version>0.2.19</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/nukkit/plugins/mchange-commons-java-0.2.19.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>io.github.kawamuray.wasmtime</groupId>
            <artifactId>wasmtime-java</artifactId>
            <version>0.3.0</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/nukkit/plugins/wasmtime-java-0.3.0-fixed.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.0.33</version>
        </dependency>
        <dependency>
            <groupId>com.eclipsesource.j2v8</groupId>
            <artifactId>j2v8_win32_x86_64</artifactId>
            <version>4.5.0</version>
        </dependency>
        <dependency>
            <groupId>com.eclipsesource.j2v8</groupId>
            <artifactId>j2v8_linux_x86_64</artifactId>
            <version>4.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.luaj</groupId>
            <artifactId>luaj-jse</artifactId>
            <version>3.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>13.0</version>
        </dependency>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>1</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/nukkit/plugins/flatlaf-0.41.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.blocklynukkit.gameAPI</groupId>
            <artifactId>gameAPI</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/nukkit/plugins/GameAPI-1.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.python</groupId>
            <artifactId>Jython</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/nukkit/plugins/pythonForBN.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.caucho</groupId>
            <artifactId>quercus</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/nukkit/plugins/quercus.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.openjdk.nashorn</groupId>
            <artifactId>nashorn-core</artifactId>
            <version>15.4</version>
        </dependency>
    </dependencies>

</project>